# Individproj2

./: Cargo.toml  IMDB_Movie_Data.db  Makefile  README.md  format.sh  lint.sh
.devcontainer/: devcontainer.json
src/: lib.rs  main.rs
