[package]
name = "individproj2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.17", features = ["derive"] }
rusqlite = "0.24.0"
csv = "1.1.6"
reqwest = { version = "0.11", features = ["blocking"] }