[package]
name = "individproj2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.7"  # Use the version that matches your project's needs.
rusqlite = "0.29.0"
csv = "1.1.6"
reqwest = { version = "0.11", features = ["blocking"] }
